--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "jest": "^26.6.3"
   },
   "dependencies": {
+    "joi": "^17.3.0",
+    "mongodb": "^3.6.3",
     "restify": "^8.5.1",
-    "uuid": "^8.3.1"
+    "uuid": "^8.3.1",
+    "uuid-mongodb": "^2.3.3"
   },
   "scripts": {
     "start": "node ./bin/server.js",
